# Shitty-Little-Server

./: .gitignore  Changelog  Makefile.am  README.md  configure.ac  libtool
man/: build  shittyd.8.pod  shittyd.conf.5.pod
src/: Makefile  daemonize.c  daemonize.h  http_parser.c  http_parser.h  httpd.c  httpd.h  logger.c  logger.h  server.c  server.h
src/config/: config_file.h  parse.y
